test/main/com/ocaml/sdk/output/errors/samples/unbound/type_constructor.ml
type t = (unit, unit, unit, unit) bar
(*
Error: Unbound type constructor bar
*)